examples/failing/DeclConflictTypeSynonym.purs
-- @shouldFailWith DeclConflict
module Main where

import Prelude

type Fail = Unit

data Fail
